[package]
name = "simple_md"
version = "0.1.0"
edition = "2021"
authors = ["Santiago Narvaez <narvaez@in.tum.de>"]
description = "A simple Molecular Dynamics simulation library"
repository = "https://github.com/santiagonar1/SimpleMD"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
